<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    
    
    <string name="hint_number_from"> 1,00 </string>
    <string name="text_convert_to"> to </string>
    <string name="btn_calculate"> Calculate </string>
    <string name="text_result"> Result </string>

    <string name="error_number_needed"> Input number </string>

    <string name="spinner_arrow_currency_content_description">Spinner Arrow for currency picking</string>



    <string name="choose_convert_from_value_prompt">Choose convert from value</string>
    <string name="choose_convert_to_value_prompt">Choose convert to value</string>
    <string-array name="currency_arrays">
        <item>AUD</item>
        <item>EUR</item>
    </string-array>

</resources>